@@ -1,9 +1,15 @@
 package fr.minemobs.minemobsutils;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import fr.minemobs.minemobsutils.commands.*;
+import fr.minemobs.minemobsutils.listener.CustomBlockListener;
+import fr.minemobs.minemobsutils.nms.versions.customblock.CustomBlock;
 import fr.minemobs.minemobsutils.objects.CustomEnchants;
 import fr.minemobs.minemobsutils.objects.Recipes;
+import fr.minemobs.minemobsutils.utils.FileUtils;
 import fr.minemobs.minemobsutils.utils.ReflectionUtils;
+import kr.entree.spigradle.annotations.SpigotPlugin;
 import org.bstats.bukkit.Metrics;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
@@ -11,22 +17,29 @@ import org.bukkit.NamespacedKey;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.PluginCommand;
 import org.bukkit.configuration.file.FileConfiguration;
+import org.bukkit.configuration.file.YamlConfiguration;
+import org.bukkit.configuration.serialization.ConfigurationSerialization;
 import org.bukkit.event.Listener;
 import org.bukkit.plugin.PluginManager;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.stream.Collectors;
 
+@SpigotPlugin
 public class MinemobsUtils extends JavaPlugin {
 
     private static MinemobsUtils instance;
-    private final FileConfiguration config = getConfig();
+    public static final Gson gson = new GsonBuilder().setPrettyPrinting().serializeNulls().disableHtmlEscaping().create();
     public static final String ebheader = String.format("%s[%sMinemobs Utils%s]%s ", ChatColor.DARK_GRAY, ChatColor.DARK_RED, ChatColor.DARK_GRAY, ChatColor.RESET);
     public static final String pluginID = "minemobsutils";
-    private final String[] supportedNMSVersions = new String[]{"1_16_R3", "1_17_R1"};
+    private final String[] supportedNMSVersions = new String[]{"1_17_R1"};
+    //configs
+    private final FileConfiguration config = getConfig();
 
     @Override
     public void onLoad() {
@@ -35,6 +48,12 @@ public class MinemobsUtils extends JavaPlugin {
 
     @Override
     public void onEnable() {
+        ConfigurationSerialization.registerClass(CustomBlock.class, "customblock");
+        try {
+            loadCustomBlocks();
+        } catch (Exception exception) {
+            exception.printStackTrace();
+        }
         Bukkit.getConsoleSender().sendMessage(ebheader + ChatColor.GREEN + "Enabled.");
         if(Arrays.stream(supportedNMSVersions).noneMatch(s -> s.equalsIgnoreCase(ReflectionUtils.getServerVersion().substring(1)))) {
             getLogger().severe("This version is not supported !");
@@ -48,6 +67,17 @@ public class MinemobsUtils extends JavaPlugin {
         //checkUpdates();
         setupBStats();
     }
+
+    private void loadCustomBlocks() {
+        final File file = new File(getDataFolder(), "customblocks.yml");
+        if(!file.exists()) return;
+        /*final String json = FileUtils.loadContent(file);
+        final CustomBlock[] blocks = (CustomBlock[]) xStream.fromXML(json);
+        CustomBlockListener.blocks.addAll(Arrays.asList(blocks));*/
+        FileConfiguration cfg = YamlConfiguration.loadConfiguration(file);
+        cfg.getKeys(false).forEach(key -> CustomBlockListener.blocks.add((CustomBlock) cfg.get(key)));
+    }
+
 
     private void setupBStats() {
         Metrics metrics = new Metrics(this, 8000);
@@ -91,8 +121,8 @@ public class MinemobsUtils extends JavaPlugin {
         PluginManager pm = Bukkit.getPluginManager();
         ReflectionUtils.getClass("fr.minemobs.minemobsutils.listener", Listener.class).forEach(clazz -> {
             try {
-                pm.registerEvents(clazz.newInstance(), this);
-            } catch (InstantiationException | IllegalAccessException e) {
+                pm.registerEvents(clazz.getDeclaredConstructor().newInstance(), this);
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 getLogger().severe(e.getMessage());
             }
         });
@@ -122,7 +152,24 @@ public class MinemobsUtils extends JavaPlugin {
 
     @Override
     public void onDisable() {
+        try {
+            saveBlocks();
+        } catch (Exception exception) {
+            exception.printStackTrace();
+        }
+    }
 
+    private void saveBlocks() throws Exception {
+        final File file = new File(getDataFolder(), "customblocks.yml");
+        FileUtils.recreateFile(file);
+        /*final CustomBlock[] customBlocks = CustomBlockListener.blocks.toArray(new CustomBlock[0]);
+        String json = xStream.toXML(customBlocks);
+        FileUtils.save(file, json);*/
+        FileConfiguration cfg = YamlConfiguration.loadConfiguration(file);
+        for (int i = 0; i < CustomBlockListener.blocks.size(); i++) {
+            cfg.set(String.valueOf(i), CustomBlockListener.blocks.get(i));
+        }
+        cfg.save(file);
     }
 
     public static NamespacedKey getKey(String key) {
